# LessonGen

./: .env.sample  .gitignore  LICENSE  Makefile  PRD.md  backlog.md  datamodel.md  docker-compose.yml  sprintplan.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/prompts/: lesson_v1.md
backend/app/api/: __init__.py  analytics.py  auth.py  gen_jobs.py  health.py  lessons.py  lms.py  profile.py  routes.py  shares.py  users.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  district.py  event.py  gen_job.py  lesson.py  lms.py  metrics.py  school.py  share.py  standard.py  tenant.py  user.py  user_role.py
backend/app/schemas/: __init__.py  analytics.py  generation.py  lesson.py  lms.py  share.py  standard.py  user.py
backend/app/scripts/: __init__.py  seed_demo.py
backend/app/services/: __init__.py  analytics_service.py  event_service.py  export_service.py  generation_service.py  google_oauth.py  lesson_service.py  lms_service.py  share_service.py  standards_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_auth_rbac.py  0003_lessons.py  0004_generation_and_standards.py  0005_lms_tables.py  0006_analytics_and_shares.py
backend/tests/: __init__.py  conftest.py  helpers.py  test_analytics.py  test_auth.py  test_exports.py  test_gen_jobs.py  test_health.py  test_lessons.py  test_lms.py  test_profile.py  test_shares.py  test_users.py
(+39 files in other folders)
